assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

nav {
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: white;
    z-index: 1;
}

.logo {
    color: black;
    letter-spacing: 1.5px;
    font-size: 20px;
}

.logo a {
    color: black;
    text-decoration: none;
}

.v-letter {
    color: #c01712;
    text-transform: uppercase;
    font-size: 30px;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 30%;
    margin-top: 5px;
}

.nav-links li {
    list-style: none;
}

.nav-links a {
    color: black;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 14px;
}

.nav-links a:hover {
    transition: 0.3s ease;
    color: #c01712;
}

.burger-menu {
    display: none;
    cursor: pointer;
}

.burger-menu div {
    width: 25px;
    height: 3px;
    background-color: black;
    margin: 5px;
    transition: all 0.3s ease;
}

#home {
    width: 100%;
}

#home img {
    display: block
}

.container {
    position: relative;
    text-align: center;
    color: white;
}

.text {
    font-size: 2vw;
    font-weight: bold;
}

#line-1 {
    position: absolute;
    top: 380px;
    left: 200px;
}

#line-2 {
    position: absolute;
    top: 440px;
    left: 400px;
}

#s-letter {
    color: #c01712;
    font-size: 4vw;
}

.button {
    position:absolute;
    width: 403px;
    height: 103px;
    top: 570px;
    left: 345px;
    background-color: #c01712;
    color: white;
    text-decoration: none;
    border: none;
    border-radius: 129px;
    padding: 22px 32px;
    text-align: center;
    display: inline-block;
    cursor: pointer;
    font-size: 40px;
    margin: 0 auto;
}

.button:hover {
    background-color: #971010;
}

.button:active {
    background-color: #971010;
    transform: translateY(4px);
}

.voxinus-img {
    overflow-x: hidden;
    width: 100%;
    height: auto;
    display: block;
}

#merch {
    display: block;
}

.merch {
    margin-top: 180px;
    padding: 10px 30px;
}

.merch-text {
    padding-top: 50px;
}

#line-3 {
    color: black;
}

#line-4 {
    color: black;
}

#m-letter {
    color: #c01712;
    font-size: 4vw;
}

.button-2 {
    position:absolute;
    width: 500px;
    height: 103px;
    top: 800px;
    left: 700px;
    background-color: #c01712;
    color: white;
    text-decoration: none;
    border: none;
    border-radius: 129px;
    padding: 22px 32px;
    text-align: center;
    display: inline-block;
    cursor: pointer;
    font-size: 40px;
    margin: 0 auto;
}

.button-2:hover {
    background-color: #971010;
}

.button-2:active {
    background-color: #971010;
    transform: translateY(4px);
}

#get-in-touch {
    margin-top: 400px;
    margin-left: 200px;
}


.form-button {
    width: 100px;
    background-color: #c01712;
    color: white;
    border: none;
    border-radius: 19px;
    padding: 10px 12px;
    text-align: center;
    display: inline-block;
    cursor: pointer;
}

.form-button:hover {
    background-color: #971010;
}

.form-button:active {
    background-color: #971010;
    transform: translateY(4px);
}
/*Breakpoint to do some spacing on the navbar list*/

@media screen and (max-width:1138px) {
    .merch {
        width: 280px;
        height: auto;
    }
}

@media screen and (max-width:1920px) {
    .nav-links {
        width: 50%;
    }
}

/*Tablet*/

@media (min-width: 575.98px) and (max-width: 991.98px) {
    body {
        overflow-x: hidden;
    }
    .nav-links {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 7.4vh;
        background-color: white;
        color: black;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.4s ease-in;
    }
    .nav-links li {
        opacity: 0;
    }
    .burger-menu {
        display: block;
        margin-top: 5px;
    }
}

/*Phone*/

@media (max-width: 575.98px) {
    body {
        overflow-x: hidden;
    }
    .nav-links {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 7.4vh;
        background-color: white;
        color: black;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.4s ease-in;
    }
    .nav-links li {
        opacity: 0;
    }
    .burger-menu {
        display: block;
        margin-top: 5px;
    }
}

.nav-active {
    transform: translateX(0%);
}

@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }
    to {
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

